--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,5 @@
 
-#CXXFLAGS = -std=c++17 -pthread -I/usr/local/include -O2 -Wall
-#LDFLAGS = -L/usr/local/lib -ltkrzw -lstdc++ -lpthread
-#--std=c++17 -I/usr/local/include/hiredis -o example qredis.cpp -L/usr/local/lib -lhiredis
-
-CXXFLAGS = -std=c++17 -O2 -Wall
-LDFLAGS = 
-
-CXXFLAGS += $(shell pkg-config --cflags hiredis)
-LDFLAGS += $(shell pkg-config --libs hiredis)
-
-CXXFLAGS += -I/usr/local/include
-LDFLAGS  += -L/usr/local/lib -lzmq -pthread -lprotobuf
-
-CXXFLAGS += $(shell tkrzw_build_util config -i)
-LDFLAGS += $(shell tkrzw_build_util config -l)
+include conf.mk
 
 SOURCES = proto/TaskMsg.pb.cc 
 
@@ -27,6 +13,9 @@ proto/TaskMsg.pb.cc: proto/TaskMsg.proto
 	protoc -I=proto --cpp_out=proto $^
 
 qredis: qredis.cpp
+	g++ -o $@ $(CXXFLAGS) $^ $(LDFLAGS)
+
+db: local_db.cpp
 	g++ -o $@ $(CXXFLAGS) $^ $(LDFLAGS)
 
 clean:
