--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -2,7 +2,11 @@
 
 include ( "${CMAKE_CURRENT_LIST_DIR}/dworkTargets.cmake" )
 
-#include(CMakeFindDependencyMacro)
-#find_dependency(dwork 1.0)
+find_dependency(Threads REQUIRED)
+find_dependency(Protobuf REQUIRED)
+find_dependency(cppzmq REQUIRED)
+find_dependency(hiredis REQUIRED)
+find_dependency(PkgConfig REQUIRED)
+pkg_search_module(TKRZW tkrzw REQUIRED IMPORTED_TARGET)
 
 check_required_components(dwork)
