Performance tests show 9.6s for protobuf-based loading of 6000 tasks into DB.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,11 @@ do_test(rtest)
 do_test(proto_writer out.pb)
 do_test(taskHeap)
 do_test(taskDB)
+
+set(CMAKE_CXX_FLAGS "-O3")
+add_executable(ktest test_kernel.cc kernel.cc)
+add_test(NAME ktest COMMAND ${target} 512 512)
+
+add_executable(kworker kworker.cc kernel.cc)
+target_link_libraries(kworker PUBLIC dwork)
+#add_test(NAME kworker COMMAND ${target} 512 512)
