--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,10 +13,13 @@ do_test(proto_writer out.pb)
 do_test(taskHeap)
 do_test(taskDB)
 
-set(CMAKE_CXX_FLAGS "-O3")
+#set(CMAKE_CXX_FLAGS "-O3")
 add_executable(ktest test_kernel.cc kernel.cc)
 add_test(NAME ktest COMMAND ktest 512 512)
 
 add_executable(kworker kworker.cc kernel.cc)
 target_link_libraries(kworker PUBLIC dwork)
 #add_test(NAME kworker COMMAND ${target} 512 512)
+
+add_executable(stencil stencil.cc kernel.cc)
+target_link_libraries(stencil PUBLIC dwork)
