--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,9 +17,12 @@ set(CMAKE_CXX_FLAGS "-O3 -fopenmp")
 add_executable(ktest test_kernel.cc kernel.cc)
 add_test(NAME ktest COMMAND ktest 512 512)
 
-add_executable(kworker kworker.cc kernel.cc)
-target_link_libraries(kworker PUBLIC dwork)
-#add_test(NAME kworker COMMAND ${target} 512 512)
+find_package(MPI)
+if(MPI_FOUND)
+    add_executable(kworker kworker.cc kernel.cc)
+    target_link_libraries(kworker PUBLIC dwork MPI::MPI_CXX)
+    #add_test(NAME kworker COMMAND ${target} 512 512)
+endif(MPI_FOUND)
 
 add_executable(stencil stencil.cc kernel.cc)
 target_link_libraries(stencil PUBLIC dwork)
