--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -3,7 +3,7 @@ find_package(Sphinx REQUIRED)
 
 # Find all the public headers
 get_target_property(THE_PUBLIC_HEADER_DIR dwork INTERFACE_INCLUDE_DIRECTORIES)
-file(GLOB_RECURSE THE_PUBLIC_HEADERS ${THE_PUBLIC_HEADER_DIR}/*.h)
+file(GLOB_RECURSE THE_PUBLIC_HEADERS ${THE_PUBLIC_HEADER_DIR}/*.hh)
 
 set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/include)
 set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
