--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -1,12 +1,12 @@
 @PACKAGE_INIT@
 
-include ( "${CMAKE_CURRENT_LIST_DIR}/dworkTargets.cmake" )
-
+include(CMakeFindDependencyMacro)
 find_dependency(Threads REQUIRED)
 find_dependency(Protobuf REQUIRED)
 find_dependency(cppzmq REQUIRED)
-find_dependency(hiredis REQUIRED)
 find_dependency(PkgConfig REQUIRED)
 pkg_search_module(TKRZW tkrzw REQUIRED IMPORTED_TARGET)
+
+include ( "${CMAKE_CURRENT_LIST_DIR}/dworkTargets.cmake" )
 
 check_required_components(dwork)
